--- a/index.html
+++ b/index.html
@@ -1,368 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Logic Runner</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Logic Runner | Propositional Logic Game</title>
 
-<!-- Retro Pixel Font -->
-<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-
-<style>
-/* ---------- Base ---------- */
-body {
-  margin: 0;
-  font-family: 'Press Start 2P', monospace;
-  background-color: #1e1e2f;
-  color: #f0f0f0;
-  overflow-x: hidden;
-}
-
-h2, h3 {
-  margin: 0.5em 0;
-  font-weight: normal;
-}
-
-.card {
-  background-color: #2b2b3c;
-  border: 2px solid #4f4f6f;
-  border-radius: 12px;
-  padding: 16px;
-  margin: 16px auto;
-  max-width: 600px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
-}
-
-/* ---------- Navigation / Hamburger ---------- */
-#hamburger {
-  display: none;
-  cursor: pointer;
-  font-size: 24px;
-  margin: 12px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-}
-
-#topnav {
-  display: flex;
-  justify-content: flex-end;
-  gap: 12px;
-  padding: 12px;
-  flex-wrap: wrap;
-}
-
-#topnav .nav-link {
-  cursor: pointer;
-  padding: 6px 10px;
-  background-color: #3a3a4a;
-  border: 1px solid #555;
-  border-radius: 6px;
-  transition: 0.2s;
-}
-
-#topnav .nav-link:hover {
-  background-color: #505070;
-}
-
-/* Mobile Hamburger Menu */
-@media (max-width: 768px) {
-  #hamburger { display: block; }
-  #topnav { display: none; flex-direction: column; position: fixed; top: 48px; left: 0; width: 100%; background-color: #2b2b3c; padding: 16px; }
-  #topnav.active { display: flex; }
-}
-
-/* ---------- Settings Card ---------- */
-.settings-group {
-  margin: 12px 0;
-}
-
-.settings-card {
-  display: inline-block;
-  background-color: #3a3a4a;
-  border: 1px solid #555;
-  border-radius: 6px;
-  padding: 6px 12px;
-  margin-right: 8px;
-  cursor: pointer;
-  transition: 0.2s;
-}
-
-.settings-card.active {
-  background-color: #6070ff;
-  border-color: #90a0ff;
-  color: #fff;
-}
-
-/* ---------- Buttons ---------- */
-.btn {
-  background-color: #6070ff;
-  color: #fff;
-  border: none;
-  padding: 8px 14px;
-  border-radius: 6px;
-  cursor: pointer;
-  font-family: 'Press Start 2P', monospace;
-  transition: 0.2s;
-}
-
-.btn:hover {
-  background-color: #90a0ff;
-}
-
-.btn-small {
-  padding: 4px 8px;
-  font-size: 12px;
-}
-
-/* ---------- Game Area ---------- */
-#game-area {
-  margin: 16px auto;
-  max-width: 640px;
-}
-
-.game-section-title {
-  font-size: 16px;
-  font-weight: bold;
-  margin-bottom: 8px;
-}
-
-.subtitle {
-  font-size: 12px;
-  margin-bottom: 8px;
-}
-
-/* ---------- Matching / Dragging ---------- */
-.matching-container {
-  display: flex;
-  justify-content: space-between;
-  gap: 16px;
-}
-
-.game-column {
-  flex: 1;
-}
-
-.column-title {
-  font-size: 14px;
-  margin-bottom: 6px;
-}
-
-.draggable-item {
-  padding: 6px 10px;
-  margin-bottom: 6px;
-  background-color: #505070;
-  border-radius: 4px;
-  cursor: grab;
-  user-select: none;
-}
-
-.drop-zone {
-  min-height: 30px;
-  background-color: #3a3a4a;
-  border: 2px dashed #6070ff;
-  margin-bottom: 6px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 4px;
-}
-
-.drop-zone.drag-over {
-  background-color: #6070ff;
-  color: #fff;
-}
-
-.drop-zone.incorrect {
-  animation: shake 0.3s;
-  border-color: #ff4040;
-}
-
-@keyframes shake {
-  0% { transform: translateX(0); }
-  25% { transform: translateX(-4px); }
-  50% { transform: translateX(4px); }
-  75% { transform: translateX(-4px); }
-  100% { transform: translateX(0); }
-}
-
-/* ---------- Truth Table ---------- */
-.tt-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 8px;
-}
-
-.tt-table th, .tt-table td {
-  border: 1px solid #555;
-  text-align: center;
-  padding: 4px 6px;
-  font-size: 12px;
-}
-
-.tt-chip {
-  display: inline-block;
-  padding: 4px 6px;
-  margin: 2px;
-  background-color: #6070ff;
-  border-radius: 4px;
-  cursor: grab;
-}
-
-/* ---------- Floating HUD ---------- */
-#floating-ui {
-  position: fixed;
-  top: 16px;
-  right: 16px;
-  background-color: rgba(43,43,60,0.95);
-  border: 2px solid #6070ff;
-  border-radius: 12px;
-  padding: 8px 12px;
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
-  z-index: 1000;
-}
-
-.hud-item {
-  font-size: 12px;
-}
-
-.hud-buttons {
-  display: flex;
-  gap: 4px;
-  flex-wrap: wrap;
-}
-
-/* ---------- Panels ---------- */
-.panel {
-  display: none;
-  margin: 16px auto;
-}
-
-.panel.active-panel {
-  display: block;
-}
-
-/* ---------- Toast Messages ---------- */
-.game-message {
-  position: fixed;
-  top: 60px;
-  right: 16px;
-  background-color: #6070ff;
-  color: #fff;
-  padding: 8px 12px;
-  border-radius: 6px;
-  font-size: 12px;
-  z-index: 2000;
-  opacity: 1;
-  transition: opacity 0.3s;
-}
-
-/* ---------- Input / Select ---------- */
-.tt-input, .tt-select {
-  width: 40px;
-  text-align: center;
-  font-family: 'Press Start 2P', monospace;
-  font-size: 12px;
-  background-color: #3a3a4a;
-  color: #fff;
-  border: 1px solid #6070ff;
-  border-radius: 4px;
-}
-
-.name-input {
-  width: 100%;
-  padding: 6px 8px;
-  background-color: #3a3a4a;
-  border: 1px solid #6070ff;
-  border-radius: 6px;
-  color: #fff;
-}
-
-/* ---------- Responsive ---------- */
-@media (max-width: 768px) {
-  .card { max-width: 90%; margin: 12px auto; }
-  .matching-container { flex-direction: column; }
-}
-</style>
-
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+  <div class="bg-animated" aria-hidden="true"></div>
 
-<!-- Hamburger -->
-<div id="hamburger">&#9776;</div>
+  <header class="topbar" role="banner">
+    <div class="topbar-left">
+      <button id="hamburger" class="hamburger" aria-label="Open menu" type="button"><i class="fas fa-bars"></i></button>
+      <div class="logo" aria-hidden="false"><i class="fas fa-brain"></i><span class="brand">Logic Runner</span></div>
+    </div>
 
-<!-- Top Navigation -->
-<div id="topnav">
-  <div class="nav-link" data-panel="game-settings">PLAY</div>
-  <div class="nav-link" data-panel="tutorial-panel">TUTORIAL</div>
-  <div class="nav-link" data-panel="about-panel">ABOUT</div>
-  <div class="nav-link" data-panel="leaderboard-panel">LEADERBOARD</div>
-</div>
+    <nav class="topnav" id="topnav" aria-label="Main navigation">
+      <button class="nav-link active" data-target="home" type="button">Play</button>
+      <button class="nav-link" data-target="tutorial-panel" type="button">Tutorial</button>
+      <button class="nav-link" data-target="about-panel" type="button">About</button>
+      <button class="nav-link" data-target="leaderboard-panel" type="button">Leaderboard</button>
+      <div class="nav-underline" aria-hidden="true"></div>
+    </nav>
 
-<!-- Floating HUD (In-game only) -->
-<div id="floating-ui" style="display:none;">
-  <div class="hud-item" id="hud-lives">Lives: 3</div>
-  <div class="hud-item" id="hud-timer">Time: 0s</div>
-  <div class="hud-buttons">
-    <button class="btn-small" id="mute-btn">Mute</button>
-    <button class="btn-small" id="restart-btn">Restart</button>
+    <div class="topbar-right">
+      <button id="sound-toggle" class="icon-btn" title="Toggle sound" type="button"><i class="fas fa-volume-up"></i></button>
+      <button id="open-leaderboard" class="icon-btn" title="Leaderboard" type="button"><i class="fas fa-trophy"></i></button>
+    </div>
+  </header>
+
+  <main class="container" id="main-container">
+    <!-- HOME / PLAY -->
+    <section id="home" class="panel active-panel" aria-label="Home">
+      <div class="hero" id="hero-section">
+        <div class="hero-left">
+          <h1 class="shimmer">Logic Runner</h1>
+          <p class="subtitle">Test your wits and master propositional logic through gameplay.</p>
+
+          <div class="topic-info" aria-hidden="false">
+            <div class="topic-title"><i class="fas fa-lightbulb"></i> Propositional Logic — Quick idea</div>
+            <p>Propositional logic deals with statements that are either true or false. Practice using connectives like AND, OR, NOT, IMPLIES and XOR through short interactive challenges.</p>
+          </div>
+
+          <!-- Big Cards layout (two by two) -->
+          <div class="menu-cards" id="menu-cards">
+            <div class="big-card-row">
+              <button class="big-card" data-target="play" id="card-play" type="button">
+                <div class="card-icon-wrap"><i class="fas fa-play card-icon"></i></div>
+                <div class="card-body"><span class="card-title">PLAY</span><small>Jump into a randomized run</small></div>
+              </button>
+
+              <button class="big-card" data-target="tutorial-panel" id="card-tut" type="button">
+                <div class="card-icon-wrap"><i class="fas fa-book card-icon"></i></div>
+                <div class="card-body"><span class="card-title">TUTORIAL</span><small>Modes, rules & tips</small></div>
+              </button>
+            </div>
+
+            <div class="big-card-row">
+              <button class="big-card" data-target="about-panel" id="card-about" type="button">
+                <div class="card-icon-wrap"><i class="fas fa-users card-icon"></i></div>
+                <div class="card-body"><span class="card-title">ABOUT</span><small>What the game teaches</small></div>
+              </button>
+
+              <button class="big-card" data-target="leaderboard-panel" id="card-leader" type="button">
+                <div class="card-icon-wrap"><i class="fas fa-trophy card-icon"></i></div>
+                <div class="card-body"><span class="card-title">LEADERBOARD</span><small>Top local runs</small></div>
+              </button>
+            </div>
+          </div>
+
+          <div class="meta-row">
+            <span class="meta-pill">Modern</span>
+            <span class="meta-pill">Minimal</span>
+            <span class="meta-pill">Fun</span>
+          </div>
+        </div>
+
+        <aside class="hero-right">
+          <div class="card" id="settings-card">
+            <div class="card-title"><i class="fas fa-sliders-h"></i> GAME SETTINGS</div>
+            <div class="settings-row">
+              <div class="settings-label">DIFFICULTY</div>
+              <div class="settings-choices" id="difficulty-select">
+                <div class="settings-card active" data-value="easy" role="button" tabindex="0">Beginner</div>
+                <div class="settings-card" data-value="medium" role="button" tabindex="0">Intermediate</div>
+                <div class="settings-card" data-value="hard" role="button" tabindex="0">Expert</div>
+              </div>
+            </div>
+
+            <div class="settings-row">
+              <div class="settings-label">MODE</div>
+              <div class="settings-choices" id="mode-select">
+                <div class="settings-card active" data-value="classic" role="button" tabindex="0">Classic</div>
+                <div class="settings-card" data-value="timed" role="button" tabindex="0">Timed</div>
+              </div>
+            </div>
+
+            <div style="margin-top:12px;">
+              <button id="start-game" class="btn btn-primary" type="button">Start Game</button>
+            </div>
+          </div>
+
+          <div class="card small-card" id="help-card">
+            <div class="card-title"><i class="fas fa-info-circle"></i> Quick Tips</div>
+            <ol class="tips">
+              <li>Drag operator names to symbols, or answer prompts when shown.</li>
+              <li>Timed mode starts when you press Start. Timer will appear in-game only.</li>
+              <li>Use Retry/Quit while playing to control runs.</li>
+            </ol>
+          </div>
+        </aside>
+      </div>
+
+      <section id="game-area" class="game-area" aria-live="polite"></section>
+    </section>
+
+    <!-- TUTORIAL -->
+    <section id="tutorial-panel" class="panel">
+      <div class="card">
+        <div class="card-title"><i class="fas fa-book"></i> Tutorial</div>
+        <div class="topic-info">
+          <div class="topic-title"><i class="fas fa-project-diagram"></i> Connectors & Semantics</div>
+          <p><strong>AND (∧)</strong> — true only when both p and q are true.<br>
+             <strong>OR (∨)</strong> — true when at least one of p or q is true.<br>
+             <strong>NOT (¬)</strong> — inverts truth.<br>
+             <strong>IMPLIES (→)</strong> — false only when p is true and q is false.<br>
+             <strong>XOR (⊕)</strong> — true when exactly one of p or q is true.</p>
+        </div>
+
+        <h3>How to Play</h3>
+        <ol class="tutorial-list">
+          <li>Choose difficulty and mode, then press Start.</li>
+          <li>Question types: symbol match, sentence fill, truth-table tasks (drag / mcq / type / dropdown / partial).</li>
+          <li>Correct answers increase score. Wrong answers lose a life. Run ends at 0 lives.</li>
+          <li>In Timed mode, each question has a countdown — answer before time runs out.</li>
+        </ol>
+      </div>
+    </section>
+
+    <!-- ABOUT -->
+    <section id="about-panel" class="panel">
+      <div class="card about-card">
+        <div class="card-title"><i class="fas fa-users"></i> About</div>
+        <div class="topic-info">
+          <div class="topic-title"><i class="fas fa-graduation-cap"></i> Learning Goals</div>
+          <p>Logic Runner is a practice tool to build fluency in propositional logic: translating sentences into logical operators, reading truth tables, and applying logical reasoning under mild time pressure.</p>
+        </div>
+        <p>Designed for students. Use it often and the patterns will stick.</p>
+      </div>
+    </section>
+
+    <!-- LEADERBOARD -->
+    <section id="leaderboard-panel" class="panel">
+      <div class="card">
+        <div class="card-title"><i class="fas fa-trophy"></i> Leaderboard (local)</div>
+
+        <div class="topic-info">
+          <div class="topic-title"><i class="fas fa-clipboard-list"></i> Tip of the Round</div>
+          <p id="topic-tip">Practice negation and small subexpressions — simplify step-by-step.</p>
+        </div>
+
+        <div style="display:flex;gap:.5rem;align-items:center;margin-bottom:8px;">
+          <input id="player-name" placeholder="Your name" class="name-input" />
+          <button id="clear-leader" class="btn btn-secondary" type="button">Clear</button>
+        </div>
+
+        <ol id="leader-list" aria-live="polite"></ol>
+      </div>
+    </section>
+  </main>
+
+  <!-- Floating HUD (top-right, shown only in-game) -->
+  <div id="floating-ui" class="floating-ui" aria-hidden="true" style="display:none;">
+    <div class="floating-top">
+      <div class="status-indicator" title="Level"><i class="fas fa-layer-group"></i> <span id="stat-level">0/0</span></div>
+      <div class="status-indicator" title="Score"><i class="fas fa-star"></i> <span id="stat-score">0</span></div>
+      <div class="status-indicator" title="Lives"><i class="fas fa-heart"></i> <span id="stat-lives">3</span></div>
+      <div id="floating-timer" class="status-indicator" style="display:none;" title="Timer"><i class="fas fa-stopwatch"></i> <span id="timer-value">0</span>s</div>
+    </div>
+    <div class="floating-actions">
+      <button id="btn-retry" class="btn floating-btn" title="Retry" type="button"><i class="fas fa-redo"></i> Retry</button>
+      <button id="btn-quit" class="btn floating-btn" title="Quit" type="button"><i class="fas fa-sign-out-alt"></i> Quit</button>
+    </div>
   </div>
-</div>
 
-<!-- Panels -->
-<div id="game-settings" class="panel active-panel card">
-  <h2>Game Settings</h2>
-  <div class="settings-group">
-    <div class="settings-card active" data-difficulty="easy">EASY</div>
-    <div class="settings-card" data-difficulty="medium">MEDIUM</div>
-    <div class="settings-card" data-difficulty="hard">HARD</div>
-  </div>
-  <button class="btn" id="start-game-btn">Start Game</button>
-</div>
-
-<div id="tutorial-panel" class="panel card">
-  <h2>Tutorial</h2>
-  <p>Learn how to play Logic Runner. Match statements, solve truth tables, and complete logic puzzles to advance.</p>
-</div>
-
-<div id="about-panel" class="panel card">
-  <h2>About</h2>
-  <p>Logic Runner is a retro-style educational game designed to strengthen propositional logic skills.</p>
-</div>
-
-<div id="leaderboard-panel" class="panel card">
-  <h2>Leaderboard</h2>
-  <p>High scores and fastest completions will be displayed here.</p>
-</div>
-
-<!-- Game Area -->
-<div id="game-area" class="card">
-  <h2>Game Area</h2>
-  <p>Game content will appear here when you start the game.</p>
-</div>
-
-<script>
-/* Hamburger toggle */
-const hamburger = document.getElementById('hamburger');
-const topnav = document.getElementById('topnav');
-
-hamburger.addEventListener('click', () => {
-  topnav.classList.toggle('active');
-});
-
-/* Navigation click */
-document.querySelectorAll('#topnav .nav-link').forEach(link => {
-  link.addEventListener('click', () => {
-    const target = link.getAttribute('data-panel');
-    document.querySelectorAll('.panel').forEach(p => p.classList.remove('active-panel'));
-    document.getElementById(target).classList.add('active-panel');
-    if(topnav.classList.contains('active')) topnav.classList.remove('active');
-  });
-});
-</script>
-
+  <script src="game.js"></script>
 </body>
 </html>
