--- a/index.html
+++ b/index.html
@@ -1,129 +1,249 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Polished Game Interface</title>
+  <meta charset="utf-8" />
+  <meta-name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Logic Runner | Propositional Logic Game</title>
+
   <link rel="stylesheet" href="style.css">
-  <script defer src="game.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
+  <div class="bg-animated" aria-hidden="true"></div>
 
-  <!-- Animated Background -->
-  <div class="bg-animated"></div>
-
-  <!-- Topbar -->
   <header class="topbar">
     <div class="topbar-left">
-      <button class="hamburger" id="hamburger"><i class="fas fa-bars"></i></button>
-      <div class="logo"><i class="fas fa-gamepad"></i> GameHub</div>
+      <button id="hamburger" class="hamburger" aria-label="Open menu" type="button">
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="logo"><i class="fas fa-brain"></i><span class="brand">Logic Runner</span></div>
     </div>
+
+    <nav class="topnav" id="topnav" style="display:none;"></nav>
+
     <div class="topbar-right">
-      <button class="icon-btn"><i class="fas fa-bell"></i></button>
-      <button class="icon-btn"><i class="fas fa-cog"></i></button>
+      <button id="sound-toggle" class="icon-btn" title="Toggle sound"><i class="fas fa-volume-up"></i></button>
+      <button id="open-leaderboard" class="icon-btn" title="Leaderboard"><i class="fas fa-trophy"></i></button>
     </div>
   </header>
 
-  <!-- Hamburger Dropdown Menu -->
-  <div class="hamburger-menu" id="hamburgerMenu" style="display:none;">
-    <button class="menu-item">Home</button>
-    <button class="menu-item">Settings</button>
-    <button class="menu-item">Help</button>
+  <div id="hamburger-menu" class="hamburger-menu" style="display:none;">
+    <button class="menu-item" data-target="home">Play</button>
+    <button class="menu-item" data-target="tutorial-panel">Tutorial</button>
+    <button class="menu-item" data-target="about-panel">About</button>
+    <button class="menu-item" data-target="leaderboard-panel">Leaderboard</button>
   </div>
 
-  <div class="container">
+  <main class="container" id="main-container">
 
-    <!-- Hero Section -->
-    <section class="hero" id="hero">
-      <div class="hero-left">
-        <h1 class="shimmer">Welcome to GameHub</h1>
-        <p class="subtitle">Polished interface for your interactive games</p>
+    <!-- HOME -->
+    <section id="home" class="panel active-panel">
+      <div class="hero">
+        <div class="hero-left">
+          <h1 class="shimmer">Logic Runner</h1>
+          <p class="subtitle">Master propositional logic through fast, interactive gameplay.</p>
+
+          <div class="topic-info">
+            <div class="topic-title"><i class="fas fa-lightbulb"></i> What is Propositional Logic?</div>
+            <p>
+              Propositional logic studies statements that are either true or false.
+              Using connectives such as <strong>AND, OR, NOT,</strong> and <strong>IMPLIES</strong>,
+              we analyze how complex expressions behave. Logic Runner turns these ideas into
+              short, fun challenges designed to strengthen your reasoning skills.
+            </p>
+          </div>
+
+          <!-- MENU CARDS -->
+          <div class="menu-cards">
+            <div class="big-card-row">
+              <button class="big-card" data-target="play">
+                <div class="card-icon-wrap"><i class="fas fa-play card-icon"></i></div>
+                <div class="card-body"><span class="card-title">PLAY</span>
+                  <small>Start a randomized challenge run</small></div>
+              </button>
+
+              <button class="big-card" data-target="tutorial-panel">
+                <div class="card-icon-wrap"><i class="fas fa-book card-icon"></i></div>
+                <div class="card-body"><span class="card-title">TUTORIAL</span>
+                  <small>Learn rules & logic basics</small></div>
+              </button>
+            </div>
+
+            <div class="big-card-row">
+              <button class="big-card" data-target="about-panel">
+                <div class="card-icon-wrap"><i class="fas fa-graduation-cap card-icon"></i></div>
+                <div class="card-body"><span class="card-title">ABOUT</span>
+                  <small>What the game teaches</small></div>
+              </button>
+
+              <button class="big-card" data-target="leaderboard-panel">
+                <div class="card-icon-wrap"><i class="fas fa-trophy card-icon"></i></div>
+                <div class="card-body"><span class="card-title">LEADERBOARD</span>
+                  <small>Your top runs</small></div>
+              </button>
+            </div>
+          </div>
+
+          <div class="meta-row">
+            <span class="meta-pill">BSIT</span>
+            <span class="meta-pill">BLOCK</span>
+            <span class="meta-pill">2N</span>
+          </div>
+        </div>
+
+        <aside class="hero-right">
+          <div class="card" id="settings-card">
+            <div class="card-title"><i class="fas fa-sliders-h"></i> GAME SETTINGS</div>
+
+            <div class="settings-row">
+              <div class="settings-label">DIFFICULTY</div>
+              <div class="settings-choices" id="difficulty-select">
+                <div class="settings-card active" data-value="easy">Beginner</div>
+                <div class="settings-card" data-value="medium">Intermediate</div>
+                <div class="settings-card" data-value="hard">Expert</div>
+              </div>
+            </div>
+
+            <div class="settings-row">
+              <div class="settings-label">MODE</div>
+              <div class="settings-choices" id="mode-select">
+                <div class="settings-card active" data-value="classic">Classic</div>
+                <div class="settings-card" data-value="timed">Timed</div>
+              </div>
+            </div>
+
+            <button id="start-game" class="btn-start">Start Game</button>
+          </div>
+
+          <div class="card small-card">
+            <div class="card-title"><i class="fas fa-info-circle"></i> Quick Tips</div>
+            <ol class="tips">
+              <li>Drag operator names or answer prompts when shown.</li>
+              <li>Timer appears only during Timed mode.</li>
+              <li>Use Retry or Quit to restart rounds anytime.</li>
+            </ol>
+          </div>
+        </aside>
       </div>
-      <div class="hero-right">
-        <div class="card">
-          <div class="card-title"><i class="fas fa-info-circle"></i> Tips</div>
-          <p>Click on a card to start a game. Use the floating HUD for quick actions.</p>
+
+      <section id="game-area" class="game-area"></section>
+    </section>
+
+    <!-- TUTORIAL -->
+    <section id="tutorial-panel" class="panel">
+      <div class="card">
+        <div class="card-title"><i class="fas fa-book"></i> Tutorial</div>
+
+        <div class="topic-info">
+          <div class="topic-title"><i class="fas fa-project-diagram"></i> Logical Connectives</div>
+          <p>
+            <strong>AND (∧)</strong>: True only if both p and q are true.<br>
+            <strong>OR (∨)</strong>: True if at least one of p or q is true.<br>
+            <strong>NOT (¬)</strong>: Inverts the truth value.<br>
+            <strong>IMPLIES (→)</strong>: False only if p is true and q is false.
+          </p>
+        </div>
+
+        <h3>How to Play</h3>
+        <ol class="tutorial-list">
+          <li>Select a difficulty level and game mode.</li>
+          <li>Solve tasks like symbol matching, sentence translation, and truth-table filling.</li>
+          <li>Correct answers increase your score; wrong answers cost one life.</li>
+          <li>In Timed mode, answer before the countdown ends.</li>
+        </ol>
+      </div>
+    </section>
+
+    <!-- ABOUT (Expanded & Informative) -->
+    <section id="about-panel" class="panel">
+      <div class="card about-card">
+        <div class="card-title"><i class="fas fa-graduation-cap"></i> About Logic Runner</div>
+
+        <div class="topic-info">
+          <div class="topic-title"><i class="fas fa-brain"></i> What You’ll Learn</div>
+          <p>
+            Logic Runner is designed to build skill and confidence in propositional logic. You’ll learn to:
+          </p>
+
+          <ul>
+            <li>Translate English statements into logical expressions.</li>
+            <li>Interpret and complete truth tables.</li>
+            <li>Recognize common logical patterns and structures.</li>
+            <li>Evaluate compound expressions step-by-step.</li>
+            <li>Apply reasoning quickly under mild time pressure.</li>
+          </ul>
+        </div>
+
+        <div class="topic-info">
+          <div class="topic-title"><i class="fas fa-list-check"></i> Example Problems</div>
+          <ul>
+            <li>Translate: “If it rains, the ground is wet.” → p → q</li>
+            <li>Fill truth table: p = T, q = F → p ∧ q = F</li>
+            <li>Evaluate: ¬(p ∨ q) when p = F, q = F → True</li>
+            <li>Match: “not p” → ¬p</li>
+          </ul>
+        </div>
+
+        <div class="topic-info">
+          <div class="topic-title"><i class="fas fa-star"></i> Features</div>
+          <ul>
+            <li>Adaptive difficulty progression.</li>
+            <li>Classic and timed challenge modes.</li>
+            <li>Multiple logic task formats.</li>
+            <li>Local leaderboard tracking.</li>
+            <li>Clean, minimal, student-friendly design.</li>
+          </ul>
+        </div>
+
+        <div class="topic-info">
+          <div class="topic-title"><i class="fas fa-road"></i> Future Improvements</div>
+          <ul>
+            <li>Support for ↔, NAND, NOR, XOR operators.</li>
+            <li>First-order logic (∀, ∃) mode.</li>
+            <li>Online global leaderboard.</li>
+            <li>Detailed performance analytics.</li>
+          </ul>
         </div>
       </div>
     </section>
 
-    <!-- Big Cards Menu -->
-    <section class="menu-cards">
-      <div class="big-card-row">
-        <button class="big-card" id="startMemoryGame">
-          <div class="card-icon-wrap"><i class="fas fa-brain card-icon"></i></div>
-          <div class="card-body">
-            <div class="card-title">Memory Game</div>
-            <small>Test your memory skills</small>
-          </div>
-        </button>
+    <!-- LEADERBOARD -->
+    <section id="leaderboard-panel" class="panel">
+      <div class="card">
+        <div class="card-title"><i class="fas fa-trophy"></i> Leaderboard (Local)</div>
 
-        <button class="big-card" id="startMatchingGame">
-          <div class="card-icon-wrap"><i class="fas fa-clone card-icon"></i></div>
-          <div class="card-body">
-            <div class="card-title">Matching Game</div>
-            <small>Drag and match items correctly</small>
-          </div>
-        </button>
-      </div>
+        <div class="topic-info">
+          <div class="topic-title"><i class="fas fa-clipboard-list"></i> Tip of the Round</div>
+          <p id="topic-tip">Practice breaking down subexpressions before solving the whole statement.</p>
+        </div>
 
-      <div class="big-card-row">
-        <button class="big-card" id="startMCQGame">
-          <div class="card-icon-wrap"><i class="fas fa-question card-icon"></i></div>
-          <div class="card-body">
-            <div class="card-title">MCQ Challenge</div>
-            <small>Choose the correct answer</small>
-          </div>
-        </button>
+        <div style="display:flex; gap:.5rem; align-items:center; margin-bottom:8px;">
+          <input id="player-name" placeholder="Your name" class="name-input">
+          <button id="clear-leader" class="btn btn-secondary">Clear</button>
+        </div>
 
-        <button class="big-card" id="startTruthTable">
-          <div class="card-icon-wrap"><i class="fas fa-table card-icon"></i></div>
-          <div class="card-body">
-            <div class="card-title">Truth Table</div>
-            <small>Complete the logic table</small>
-          </div>
-        </button>
+        <ol id="leader-list"></ol>
       </div>
     </section>
 
-    <!-- Game Area -->
-    <section class="game-area" id="gameArea">
-      <!-- Content dynamically injected by game.js -->
-    </section>
+  </main>
 
-    <!-- Floating HUD -->
-    <div class="floating-ui" id="floatingUI">
-      <div class="floating-top">
-        <span class="status-indicator" id="gameStatus">Ready</span>
-      </div>
-      <div class="floating-actions">
-        <button class="btn floating-btn" id="btnReset">Reset</button>
-        <button class="btn floating-btn" id="btnCheck">Check</button>
-      </div>
+  <!-- FLOATING HUD -->
+  <div id="floating-ui" class="floating-ui" style="display:none;">
+    <div class="floating-top">
+      <div class="status-indicator"><i class="fas fa-layer-group"></i> <span id="stat-level">0/0</span></div>
+      <div class="status-indicator"><i class="fas fa-star"></i> <span id="stat-score">0</span></div>
+      <div class="status-indicator"><i class="fas fa-heart"></i> <span id="stat-lives">3</span></div>
+      <div id="floating-timer" class="status-indicator" style="display:none;"><i class="fas fa-stopwatch"></i> <span id="timer-value">0</span>s</div>
     </div>
 
-  </div>
-
-  <!-- Toast / Messages -->
-  <div class="game-message" id="gameMessage" style="display:none;">Message</div>
-
-  <!-- Modal Overlay -->
-  <div class="modal-overlay" id="modalOverlay" style="display:none;">
-    <div class="modal-popup" id="modalPopup">
-      <p id="modalText">Modal content here</p>
-      <button class="btn" id="modalClose">Close</button>
+    <div class="floating-actions">
+      <button id="btn-retry" class="btn floating-btn"><i class="fas fa-redo"></i> Retry</button>
+      <button id="btn-quit" class="btn floating-btn"><i class="fas fa-sign-out-alt"></i> Quit</button>
     </div>
   </div>
 
-  <script>
-    // Hamburger toggle
-    const hamburger = document.getElementById('hamburger');
-    const menu = document.getElementById('hamburgerMenu');
-    hamburger.addEventListener('click', () => {
-      menu.style.display = menu.style.display === 'flex' ? 'none' : 'flex';
-    });
-  </script>
-
+  <script src="game.js"></script>
 </body>
 </html>
